# pve-manager

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  aclocal.m4  autogen.sh  bridgevlan  bridgevlanport  common.mk  configure.in  copyright  country.pl  defines.mk  mtu  pve-apt.conf  pve-sources.list  repoid.pl  spice-example-sh  vlan-down  vzdump-hook-script.pl  vzdump.conf  xgettext.pl
PVE/: .gitignore  API2.pm  API2Client.pm  API2Tools.pm  APIDaemon.pm  APLInfo.pm  AutoBalloon.pm  CephTools.pm  CertCache.pm  CertHelpers.pm  ExtJSIndex.pm  ExtJSIndex5.pm  ExtJSIndex6.pm  ExtMetric.pm  HTTPServer.pm  Jobs.pm  Makefile  NoVncIndex.pm  NodeConfig.pm  OpenVZ.pm  OpenVZMigrate.pm  PullMetric.pm  REST.pm  Replication.pm  Report.pm  (+3 more)
www/images/: Makefile  Makefile.am  favicon.xcf  icon-cd.xcf  icon-cpu.xcf  icon-pci.xcf  icon-ram.xcf  icon-sdn.dot  lxc-containers-logo-off.xcf
www/manager/: .gitignore  Makefile  Makefile.am  Parser.js  StateProvider.js  Toolkit.js  Utils.js  VNCConsole.js  Workspace.js  index.pl  pve-lang-de.js  startup.pl
www/manager/button/: Button.js  ConsoleButton.js
www/manager/ceph/: Config.js  Crush.js  Disks.js  Monitor.js  OSD.js  Pool.js
www/manager/data/: DiffStore.js  ObjectStore.js  PVEProxy.js  PendingObjectStore.js  ResourceStore.js  UpdateQueue.js  UpdateStore.js
www/manager/data/reader/: JsonObject.js
www/manager/dc/: ACLView.js  AuthEdit.js  AuthView.js  Backup.js  Config.js  GroupEdit.js  GroupView.js  HAConfig.js  Log.js  OptionView.js  PoolEdit.js  PoolView.js  RoleView.js  SecurityGroups.js  StorageView.js  Summary.js  Support.js  Tasks.js  UserEdit.js  UserView.js
www/manager/form/: BackupModeSelector.js  BondModeSelector.js  Boolean.js  BridgeSelector.js  BusTypeSelector.js  CPUModelSelector.js  CacheTypeSelector.js  ComboGrid.js  CompressionSelector.js  ContentTypeSelector.js  ControllerSelector.js  DayOfWeekSelector.js  DiskFormatSelector.js  FileSelector.js  GroupSelector.js  HotplugFeatureSelector.js  IPProtocolSelector.js  IPRefSelector.js  IPSetSelector.js  KVComboBox.js  MemoryField.js  NetworkCardSelector.js  NodeSelector.js  PoolSelector.js  RRDTypeSelector.js  RealmComboBox.js  ScsiHwSelector.js  SecurityGroupSelector.js  SnapshotSelector.js  StorageSelector.js  UserSelector.js  VLanField.js  VMIDSelector.js  ViewSelector.js
www/manager/grid/: BackupView.js  CheckColumn.js  FirewallAliases.js  FirewallOptions.js  FirewallRules.js  LogView.js  ObjectGrid.js  PendingObjectGrid.js  PoolMembers.js  ResourceGrid.js  SelectFeature.js
www/manager/ha/: Fencing.js  GroupEdit.js  GroupSelector.js  Groups.js  ResourceEdit.js  Resources.js  StatusView.js
www/manager/lxc/: CmdMenu.js  Config.js  CreateWizard.js  DNS.js  MPResize.js  Network.js  Options.js  ResourceEdit.js  Resources.js  Snapshot.js  SnapshotTree.js  StatusView.js  Summary.js
www/manager/node/: APT.js  BCFailCnt.js  Ceph.js  Config.js  DNSEdit.js  DNSView.js  NetworkEdit.js  NetworkView.js  ServiceView.js  StatusView.js  Subscription.js  Summary.js  Syslog.js  Tasks.js  TimeEdit.js  TimeView.js
www/manager/openvz/: BeanCounterGrid.js  CmdMenu.js  Config.js  CreateWizard.js  DNS.js  Network.js  Options.js  RessourceEdit.js  RessourceView.js  StatusView.js  Summary.js
www/manager/panel/: ConfigPanel.js  Firewall.js  IPSet.js  InputPanel.js  LogView.js  NotesView.js  RRDView.js  StatusPanel.js
www/manager/pool/: Config.js  StatusView.js  Summary.js
www/manager/qemu/: Backup.js  BootOrderEdit.js  CDEdit.js  CPUOptions.js  Clone.js  CmdMenu.js  Config.js  Console.js  CreateWizard.js  DisplayEdit.js  HDEdit.js  HDMove.js  HDResize.js  HDThrottle.js  HardwareView.js  KeyboardEdit.js  MemoryEdit.js  Migrate.js  Monitor.js  NetworkEdit.js  NotesEdit.js  NotesView.js  OSTypeEdit.js  Options.js  ProcessorEdit.js  QemuBiosEdit.js  ScsiHwEdit.js  SendKeyMenu.js  Smbios1Edit.js  Snapshot.js  SnapshotTree.js  StartupEdit.js  StatusView.js  Summary.js  TemplateMenu.js
www/manager/storage/: Browser.js  ContentView.js  DirEdit.js  GlusterFsEdit.js  IScsiEdit.js  LVMEdit.js  NFSEdit.js  NexentaEdit.js  RBDEdit.js  SheepdogEdit.js  StatusView.js  Summary.js  ZFSEdit.js  ZFSPoolEdit.js
www/manager/tree/: ResourceTree.js
www/manager/window/: Backup.js  Edit.js  LoginWindow.js  Migrate.js  NotesEdit.js  Restore.js  TaskViewer.js  Wizard.js
www/new/: Makefile.am  PVEUtils.js  StateProvider.js  VNCConsole.js  Workspace.js  index.pl
www/new/data/: DiffStore.js  ObjectStore.js  PVEProxy.js  ResourceStore.js  TimezoneStore.js  UpdateQueue.js  UpdateStore.js
www/new/data/reader/: JsonObject.js
www/new/dc/: Config.js  GroupView.js  Log.js  RoleView.js  Tasks.js  UserView.js
www/new/form/: BondModeSelector.js  BusTypeSelector.js  Checkbox.js  ComboGrid.js  DiskFormatSelector.js  FileSelector.js  NetworkCardSelector.js  NodeSelector.js  RRDTypeSelector.js  RealmComboBox.js  StorageSelector.js  TextField.js  ViewSelector.js
www/new/grid/: ObjectGrid.js  ResourceGrid.js  SelectFeature.js
www/new/node/: Config.js  DNSEdit.js  DNSView.js  NetworkEdit.js  NetworkView.js  ServiceView.js  StatusView.js  Summary.js  Syslog.js  Tasks.js  TimeEdit.js  TimeView.js
www/new/panel/: ConfigPanel.js  RRDView.js  StatusPanel.js
www/new/qemu/: Config.js  CreateWizard.js  HardwareView.js  StatusView.js  Summary.js
www/new/storage/: Browser.js
www/new/tree/: ResourceTree.js
www/new/window/: LoginWindow.js  TaskViewer.js  Wizard.js
www/old/: ClusterConfig.js  ConfigPanel.js  KVMConfig.js  Makefile.am  NodeConfig.js  PVECache.js  PVEConsole.js  PVEFilter.js  PVESearch.js  PVEUtils.js  ResourceTree.js  StatusPanel.js  StorageBrowser.js  Workspace.js  index.pl  startup.pl
www/old/data/: ObjectReader.js  ObjectStore.js  SearchStore.js  UpdateStore.js
www/old/form/: ModifyDirStorage.js  StdForm.js
www/old/grid/: ObjectView.js
www/old/util/: base64.js
www/old/window/: LoginWindow.js  ModalDialog.js
www/templates/: .gitignore  Makefile  Makefile.am  generate.pl  pve-old.conf.in  pve-redirect.conf  pve-redirect.conf.in  pve.conf  pve.conf.in  ve-pve.auto.conf-sample
(+753 files in other folders)
