AC_INIT(README)
AM_INIT_AUTOMAKE(pve-manager,2.0)
AM_MAINTAINER_MODE

prefix=/usr

PACKAGERELEASE=4
AC_SUBST(PACKAGERELEASE)

REPOID=`svnversion .`
AC_SUBST(REPOID)

PERL_LIBDIR="/usr/share/perl5" 
AC_SUBST(PERL_LIBDIR)

PROXMOX_ETC="/etc/pve" 
AC_SUBST(PROXMOX_ETC)

DOCDIR="/usr/share/doc/${PACKAGE}"
AC_SUBST(DOCDIR)

WWW_BASEDIR="/usr/share/${PACKAGE}"
AC_SUBST(WWW_BASEDIR)

WWW_ROOTDIR="${WWW_BASEDIR}/root"
AC_SUBST(WWW_ROOTDIR)

WWW_IMAGEDIR="${WWW_BASEDIR}/images"
AC_SUBST(WWW_IMAGEDIR)

WWW_CSSDIR="${WWW_BASEDIR}/css"
AC_SUBST(WWW_CSSDIR)

WWW_EXTDIR="${WWW_BASEDIR}/ext4"
AC_SUBST(WWW_EXTDIR)

#AM_GNU_GETTEXT
AM_PO_SUBDIRS

AC_PROG_CC()

AC_OUTPUT([
Makefile
po/Makefile.in
debian/control
aplinfo/Makefile
lib/PVE/pvecfg.pm
lib/Makefile
lib/PVE/Makefile
lib/PVE/API2/Makefile
bin/Makefile
bin/test/Makefile
bin/init.d/Makefile
bin/cron/Makefile
bin/cron/daily/Makefile
www/Makefile
www/templates/Makefile
www/css/Makefile
www/ext4/Makefile
www/manager/Makefile
www/images/Makefile
www/templates/pve.conf
www/templates/pve-redirect.conf
])

#www/root/Makefile
#www/root/cluster/Makefile
#www/root/vmlist/Makefile
#www/root/openvz/Makefile
#www/root/openvz/vmlogs/Makefile
#www/root/qemu/Makefile
#www/root/apl/Makefile
#www/root/iso/Makefile
#www/root/system/Makefile
#www/root/server/Makefile
#www/root/storage/Makefile
#www/root/backup/Makefile
#www/root/logs/Makefile


